--- a/home2.css
+++ b/home2.css
@@ -415,9 +415,9 @@
 
         .sport-icon {
             width: 18.5px;
-          	height: auto;
-            /*height: 15px;*/
-            margin-right: 0px;
+            height: auto;
+            /*height: 15px;
+            margin-right: 0px;*/
         }
 
         .team {
